# django-chinook

./: .dockerignore  .env.example  .gitignore  README.md  chinook.json  chinook.sqlite3  dev.Dockerfile  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini  seed.sql
django_chinook/: asgi.py  settings.py  urls.py  wsgi.py
django_chinook/core/: models.py
django_chinook/customer/: models.py
django_chinook/customer/migrations/: 0001_initial.py
django_chinook/employee/: models.py
django_chinook/employee/migrations/: 0001_initial.py
django_chinook/music/: models.py
django_chinook/music/migrations/: 0001_initial.py
exercises/: django-queries.md
tests/: test_django_chinook.py
