[tool.poetry]
name = "django-chinook"
version = "0.1.0"
description = "A Django project connected to Chinook database"
authors = ["Alexandre Xavier <ale.bxsantos@gmail.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
django-extensions = "^3.1.1"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.0"
mypy = "^0.812"
autopep8 = "^1.5.6"
ipython = "^7.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
